--- a/public/hider.html
+++ b/public/hider.html
@@ -201,9 +201,23 @@
       100% { transform: rotate(360deg); }
     }
 
+    #screenblock {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background-color: rgba(103, 103, 103, 1);
+      color: white;
+      font-size: 1.5rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+    }
+
   </style>
 </head>
 <body>
+  <div id="screenblock"></div>
 
   <button id="found-button">I've been found!</button>
   <button id="help-button" onclick="openSMS()">Help</button>
@@ -333,6 +347,26 @@
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore-compat.js"></script>
 
   <script>
+      (function () {
+        const overlay = document.getElementById('screenblock');
+        const allowedPassword = 'pineapple12';
+
+        const granted = sessionStorage.getItem('hiderAccess');
+        if (granted === 'granted') {
+          overlay.style.display = 'none';
+          return;
+        }
+
+        const password = prompt("Enter the password to access this page:");
+        if (password === allowedPassword) {
+          sessionStorage.setItem('hiderAccess', 'granted');
+          overlay.style.display = 'none';
+        } else {
+          alert("Wrong password! Redirecting...");
+          window.location.href = '/';
+        }
+      })();
+
       // Your web app's Firebase configuration
       // For Firebase JS SDK v7.20.0 and later, measurementId is optional
       const firebaseConfig = {
