--- a/public/hider.html
+++ b/public/hider.html
@@ -226,91 +226,163 @@
 
   <form id="uploadForm">
     <!-- Repeatable category block -->
-    <div class="category-section" data-category="red">
-      <h3>Something red</h3>
+    <div class="category-section" data-category="snoskyffel">
+      <h3>Snoskyffel</h3>
       <div class="upload-box">
-        <input type="file" name="red" accept="image/*" capture="camera" />
+        <input type="file" name="snoskyffel" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
     </div>
 
-    <div class="category-section" data-category="leaf">
-      <h3>A leaf</h3>
+    <div class="category-section" data-category="solhetta">
+      <h3>Solhetta</h3>
       <div class="upload-box">
-        <input type="file" name="red" accept="image/*" capture="camera" />
+        <input type="file" name="solhetta" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
     </div>
 
-    <div class="category-section" data-category="circle">
-      <h3>A circle</h3>
+    <div class="category-section" data-category="lack">
+      <h3>Lack</h3>
       <div class="upload-box">
-        <input type="file" name="red" accept="image/*" capture="camera" />
+        <input type="file" name="lack" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
     </div>
 
-    <div class="category-section" data-category="toy">
-      <h3>A toy</h3>
+    <div class="category-section" data-category="drommare">
+      <h3>Drommare</h3>
       <div class="upload-box">
-        <input type="file" name="red" accept="image/*" capture="camera" />
+        <input type="file" name="drommare" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
     </div>
 
-    <div class="category-section" data-category="reflection">
-      <h3>A reflection</h3>
+    <div class="category-section" data-category="angsjon">
+      <h3>Angsjon</h3>
       <div class="upload-box">
-        <input type="file" name="red" accept="image/*" capture="camera" />
+        <input type="file" name="angsjon" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
     </div>
 
-    <div class="category-section" data-category="soft">
-      <h3>Something soft</h3>
+    <div class="category-section" data-category="stoense">
+      <h3>Stoense</h3>
       <div class="upload-box">
-        <input type="file" name="red" accept="image/*" capture="camera" />
+        <input type="file" name="stoense" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
     </div>
 
-    <div class="category-section" data-category="triangle">
-      <h3>A triangle</h3>
+    <div class="category-section" data-category="hemnes">
+      <h3>Hemnes</h3>
       <div class="upload-box">
-        <input type="file" name="red" accept="image/*" capture="camera" />
+        <input type="file" name="hemnes" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
     </div>
 
-    <div class="category-section" data-category="old">
-      <h3>Something old</h3>
+    <div class="category-section" data-category="klimpfjall">
+      <h3>Klimpfjall</h3>
       <div class="upload-box">
-        <input type="file" name="red" accept="image/*" capture="camera" />
+        <input type="file" name="klimpfjall" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
     </div>
 
-    <div class="category-section" data-category="funny">
-      <h3>Something funny</h3>
+    <div class="category-section" data-category="lettan">
+      <h3>Lettan</h3>
       <div class="upload-box">
-        <input type="file" name="red" accept="image/*" capture="camera" />
+        <input type="file" name="lettan" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
     </div>
 
-    <div class="category-section" data-category="tall">
-      <h3>Something tall</h3>
+    <div class="category-section" data-category="havrehoj">
+      <h3>Havrehoj</h3>
       <div class="upload-box">
-        <input type="file" name="red" accept="image/*" capture="camera" />
+        <input type="file" name="havrehoj" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div>
+
+    <div class="category-section" data-category="mullfjallet">
+      <h3>Mullfjallet</h3>
+      <div class="upload-box">
+        <input type="file" name="mullfjallet" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div>
+
+    <div class="category-section" data-category="ljungan">
+      <h3>Ljungan</h3>
+      <div class="upload-box">
+        <input type="file" name="ljungan" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div>
+
+    <div class="category-section" data-category="billy">
+      <h3>Billy</h3>
+      <div class="upload-box">
+        <input type="file" name="billy" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div>
+
+    <div class="category-section" data-category="vitmossa">
+      <h3>Vitmossa</h3>
+      <div class="upload-box">
+        <input type="file" name="vitmossa" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div>
+
+    <div class="category-section" data-category="vappeby">
+      <h3>Vappeby</h3>
+      <div class="upload-box">
+        <input type="file" name="vappeby" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div>
+
+    <div class="category-section" data-category="bild">
+      <h3>Bild</h3>
+      <div class="upload-box">
+        <input type="file" name="bild" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div>
+
+    <div class="category-section" data-category="pax">
+      <h3>Pax</h3>
+      <div class="upload-box">
+        <input type="file" name="pax" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div>
+
+    <div class="category-section" data-category="sunnersta">
+      <h3>Sunnersta</h3>
+      <div class="upload-box">
+        <input type="file" name="sunnersta" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
@@ -544,8 +616,10 @@
 
     // List of all required categories
     const allCategories = [
-      "red", "leaf", "circle", "toy", "reflection",
-      "soft", "triangle", "old", "funny", "tall"
+      "snoskyffel", "solhetta", "lack", "drommare", "angsjon",
+      "stoense", "hemnes", "klimpfjall", "lettan", "havrehoj",
+      "mullfjallet", "ljungan", "billy", "vitmossa", "vappeby",
+      "bild", "pax", "sunnersta"
     ];
 
     const allItemsPopup = document.getElementById("all-items-popup");
