categories updated to easier ones

--- a/public/hider.html
+++ b/public/hider.html
@@ -226,64 +226,37 @@
 
   <form id="uploadForm">
     <!-- Repeatable category block -->
-    <div class="category-section" data-category="snoskyffel">
-      <h3>Snoskyffel</h3>
+    <div class="category-section" data-category="fantastisk">
+      <h3>Fantastisk</h3>
       <div class="upload-box">
-        <input type="file" name="snoskyffel" accept="image/*" capture="camera" />
+        <input type="file" name="fantastisk" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
     </div>
 
-    <div class="category-section" data-category="solhetta">
-      <h3>Solhetta</h3>
+    <div class="category-section" data-category="lugnare">
+      <h3>Lugnare</h3>
       <div class="upload-box">
-        <input type="file" name="solhetta" accept="image/*" capture="camera" />
+        <input type="file" name="lugnare" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
     </div>
 
-    <div class="category-section" data-category="lack">
-      <h3>Lack</h3>
+    <div class="category-section" data-category="upplaga">
+      <h3>Upplaga</h3>
       <div class="upload-box">
-        <input type="file" name="lack" accept="image/*" capture="camera" />
+        <input type="file" name="upplaga" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
     </div>
 
-    <div class="category-section" data-category="drommare">
-      <h3>Drommare</h3>
+    <div class="category-section" data-category="fejka">
+      <h3>Fejka</h3>
       <div class="upload-box">
-        <input type="file" name="drommare" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div>
-
-    <div class="category-section" data-category="angsjon">
-      <h3>Angsjon</h3>
-      <div class="upload-box">
-        <input type="file" name="angsjon" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div>
-
-    <div class="category-section" data-category="stoense">
-      <h3>Stoense</h3>
-      <div class="upload-box">
-        <input type="file" name="stoense" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div>
-
-    <div class="category-section" data-category="hemnes">
-      <h3>Hemnes</h3>
-      <div class="upload-box">
-        <input type="file" name="hemnes" accept="image/*" capture="camera" />
+        <input type="file" name="fejka" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
@@ -298,37 +271,10 @@
       <div class="success-message"></div>
     </div>
 
-    <div class="category-section" data-category="lettan">
-      <h3>Lettan</h3>
-      <div class="upload-box">
-        <input type="file" name="lettan" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div>
-
-    <div class="category-section" data-category="havrehoj">
-      <h3>Havrehoj</h3>
-      <div class="upload-box">
-        <input type="file" name="havrehoj" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div>
-
     <div class="category-section" data-category="mullfjallet">
       <h3>Mullfjallet</h3>
       <div class="upload-box">
         <input type="file" name="mullfjallet" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div>
-
-    <div class="category-section" data-category="ljungan">
-      <h3>Ljungan</h3>
-      <div class="upload-box">
-        <input type="file" name="ljungan" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
@@ -343,50 +289,167 @@
       <div class="success-message"></div>
     </div>
 
-    <div class="category-section" data-category="vitmossa">
-      <h3>Vitmossa</h3>
+    <div class="category-section" data-category="sockerart">
+      <h3>Sockerart</h3>
       <div class="upload-box">
-        <input type="file" name="vitmossa" accept="image/*" capture="camera" />
+        <input type="file" name="sockerart" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
     </div>
 
-    <div class="category-section" data-category="vappeby">
-      <h3>Vappeby</h3>
+    <div class="category-section" data-category="uppland">
+      <h3>Uppland</h3>
       <div class="upload-box">
-        <input type="file" name="vappeby" accept="image/*" capture="camera" />
+        <input type="file" name="uppland" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
     </div>
 
-    <div class="category-section" data-category="bild">
-      <h3>Bild</h3>
+    <div class="category-section" data-category="blavingad">
+      <h3>Blavingad</h3>
       <div class="upload-box">
-        <input type="file" name="bild" accept="image/*" capture="camera" />
+        <input type="file" name="blavingad" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
     </div>
 
-    <div class="category-section" data-category="pax">
-      <h3>Pax</h3>
+    <div class="category-section" data-category="lova">
+      <h3>Lova</h3>
       <div class="upload-box">
-        <input type="file" name="pax" accept="image/*" capture="camera" />
+        <input type="file" name="lova" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
     </div>
 
-    <div class="category-section" data-category="sunnersta">
-      <h3>Sunnersta</h3>
+    <div class="category-section" data-category="bagis">
+      <h3>Bagis</h3>
       <div class="upload-box">
-        <input type="file" name="sunnersta" accept="image/*" capture="camera" />
+        <input type="file" name="bagis" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
     </div>
+
+    <!-- <div class="category-section" data-category="varmblixt">
+      <h3>Varmblixt</h3>
+      <div class="upload-box">
+        <input type="file" name="varmblixt" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div> -->
+
+    <!-- <div class="category-section" data-category="pyssla">
+      <h3>Pyssla</h3>
+      <div class="upload-box">
+        <input type="file" name="pyssla" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div> -->
+
+    <!-- <div class="category-section" data-category="senapmild">
+      <h3>Senap Mild</h3>
+      <div class="upload-box">
+        <input type="file" name="senapmild" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div> -->
+
+    <!-- <div class="category-section" data-category="dinera">
+      <h3>Dinera</h3>
+      <div class="upload-box">
+        <input type="file" name="dinera" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div> -->
+
+    <!-- <div class="category-section" data-category="laktare">
+      <h3>Laktare</h3>
+      <div class="upload-box">
+        <input type="file" name="laktare" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div> -->
+
+    <!-- <div class="category-section" data-category="superkall">
+      <h3>Superkall</h3>
+      <div class="upload-box">
+        <input type="file" name="superkall" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div> -->
+
+    <!-- <div class="category-section" data-category="pektolit">
+      <h3>Pektolit</h3>
+      <div class="upload-box">
+        <input type="file" name="pektolit" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div> -->
+
+    <!-- <div class="category-section" data-category="lockig">
+      <h3>Lockig</h3>
+      <div class="upload-box">
+        <input type="file" name="lockig" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div> -->
+
+    <!-- <div class="category-section" data-category="fredde">
+      <h3>Fredde</h3>
+      <div class="upload-box">
+        <input type="file" name="fredde" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div> -->
+
+    <!-- <div class="category-section" data-category="svartpoppel">
+      <h3>Svartpoppel</h3>
+      <div class="upload-box">
+        <input type="file" name="svartpoppel" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div> -->
+
+    <!-- <div class="category-section" data-category="fridhult">
+      <h3>Fridhult</h3>
+      <div class="upload-box">
+        <input type="file" name="fridhult" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div> -->
+
+    <!-- <div class="category-section" data-category="froset">
+      <h3>Froset</h3>
+      <div class="upload-box">
+        <input type="file" name="froset" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div> -->
+
+    <!-- <div class="category-section" data-category="pluttis">
+      <h3>Pluttis</h3>
+      <div class="upload-box">
+        <input type="file" name="pluttis" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div> -->
   </form>
 
     <!-- Found Popup -->
@@ -616,11 +679,16 @@
 
     // List of all required categories
     const allCategories = [
-      "snoskyffel", "solhetta", "lack", "drommare", "angsjon",
-      "stoense", "hemnes", "klimpfjall", "lettan", "havrehoj",
-      "mullfjallet", "ljungan", "billy", "vitmossa", "vappeby",
-      "bild", "pax", "sunnersta"
+      "fantastisk", "lugnare", "upplaga", "fejka", "klimpfjall",
+      "mullfjallet", "billy", "sockerart", "uppland", "blavingad",
+      "lova", "bagis"
     ];
+
+    // const allCategories = [
+    //   "varmblixt", "pyssla", "senap mild", "dinera", "laktare",
+    //   "superkall", "pektolit", "lockig", "fredde", "svartpoppel",
+    //   "fridhult", "froset", "pluttis"
+    // ];
 
     const allItemsPopup = document.getElementById("all-items-popup");
     const allItemsOkButton = document.getElementById("all-items-ok");
