--- a/public/hider.html
+++ b/public/hider.html
@@ -235,122 +235,122 @@
       <div class="success-message"></div>
     </div>
 
-    <div class="category-section" data-category="lugnare">
+    <!-- <div class="category-section" data-category="lugnare">
       <h3>Lugnare</h3>
       <div class="upload-box">
         <input type="file" name="lugnare" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
-    </div>
+    </div> -->
 
-    <div class="category-section" data-category="upplaga">
+    <!-- <div class="category-section" data-category="upplaga">
       <h3>Upplaga</h3>
       <div class="upload-box">
         <input type="file" name="upplaga" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
-    </div>
+    </div> -->
 
-    <div class="category-section" data-category="fejka">
+    <!-- <div class="category-section" data-category="fejka">
       <h3>Fejka</h3>
       <div class="upload-box">
         <input type="file" name="fejka" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
-    </div>
+    </div> -->
 
-    <div class="category-section" data-category="klimpfjall">
+    <!-- <div class="category-section" data-category="klimpfjall">
       <h3>Klimpfjall</h3>
       <div class="upload-box">
         <input type="file" name="klimpfjall" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
-    </div>
+    </div> -->
 
-    <div class="category-section" data-category="mullfjallet">
+    <!-- <div class="category-section" data-category="mullfjallet">
       <h3>Mullfjallet</h3>
       <div class="upload-box">
         <input type="file" name="mullfjallet" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
-    </div>
+    </div> -->
 
-    <div class="category-section" data-category="billy">
+    <!-- <div class="category-section" data-category="billy">
       <h3>Billy</h3>
       <div class="upload-box">
         <input type="file" name="billy" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
-    </div>
+    </div> -->
 
-    <div class="category-section" data-category="sockerart">
+    <!-- <div class="category-section" data-category="sockerart">
       <h3>Sockerart</h3>
       <div class="upload-box">
         <input type="file" name="sockerart" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
-    </div>
+    </div> -->
 
-    <div class="category-section" data-category="uppland">
+    <!-- <div class="category-section" data-category="uppland">
       <h3>Uppland</h3>
       <div class="upload-box">
         <input type="file" name="uppland" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
-    </div>
+    </div> -->
 
-    <div class="category-section" data-category="blavingad">
+    <!-- <div class="category-section" data-category="blavingad">
       <h3>Blavingad</h3>
       <div class="upload-box">
         <input type="file" name="blavingad" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
-    </div>
+    </div> -->
 
-    <div class="category-section" data-category="lova">
+    <!-- <div class="category-section" data-category="lova">
       <h3>Lova</h3>
       <div class="upload-box">
         <input type="file" name="lova" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
-    </div>
+    </div> -->
 
-    <div class="category-section" data-category="bagis">
+    <!-- <div class="category-section" data-category="bagis">
       <h3>Bagis</h3>
       <div class="upload-box">
         <input type="file" name="bagis" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
-    </div>
+    </div> -->
 
-    <!-- <div class="category-section" data-category="varmblixt">
+    <div class="category-section" data-category="varmblixt">
       <h3>Varmblixt</h3>
       <div class="upload-box">
         <input type="file" name="varmblixt" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
-    </div> -->
+    </div>
 
-    <!-- <div class="category-section" data-category="pyssla">
+    <div class="category-section" data-category="pyssla">
       <h3>Pyssla</h3>
       <div class="upload-box">
         <input type="file" name="pyssla" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
-    </div> -->
+    </div>
 
     <!-- <div class="category-section" data-category="senapmild">
       <h3>Senap Mild</h3>
@@ -361,95 +361,86 @@
       <div class="success-message"></div>
     </div> -->
 
-    <!-- <div class="category-section" data-category="dinera">
-      <h3>Dinera</h3>
-      <div class="upload-box">
-        <input type="file" name="dinera" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div> -->
-
-    <!-- <div class="category-section" data-category="laktare">
+    <div class="category-section" data-category="laktare">
       <h3>Laktare</h3>
       <div class="upload-box">
         <input type="file" name="laktare" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
-    </div> -->
+    </div>
 
-    <!-- <div class="category-section" data-category="superkall">
+    <div class="category-section" data-category="superkall">
       <h3>Superkall</h3>
       <div class="upload-box">
         <input type="file" name="superkall" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
-    </div> -->
+    </div>
 
-    <!-- <div class="category-section" data-category="pektolit">
+    <div class="category-section" data-category="pektolit">
       <h3>Pektolit</h3>
       <div class="upload-box">
         <input type="file" name="pektolit" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
-    </div> -->
+    </div>
 
-    <!-- <div class="category-section" data-category="lockig">
+    <div class="category-section" data-category="lockig">
       <h3>Lockig</h3>
       <div class="upload-box">
         <input type="file" name="lockig" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
-    </div> -->
+    </div>
 
-    <!-- <div class="category-section" data-category="fredde">
-      <h3>Fredde</h3>
+    <div class="category-section" data-category="oskarshamn">
+      <h3>Oskarshamn</h3>
       <div class="upload-box">
-        <input type="file" name="fredde" accept="image/*" capture="camera" />
+        <input type="file" name="oskarshamn" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
-    </div> -->
+    </div>
 
-    <!-- <div class="category-section" data-category="svartpoppel">
+    <div class="category-section" data-category="svartpoppel">
       <h3>Svartpoppel</h3>
       <div class="upload-box">
         <input type="file" name="svartpoppel" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
-    </div> -->
+    </div>
 
-    <!-- <div class="category-section" data-category="fridhult">
+    <div class="category-section" data-category="fridhult">
       <h3>Fridhult</h3>
       <div class="upload-box">
         <input type="file" name="fridhult" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
-    </div> -->
+    </div>
 
-    <!-- <div class="category-section" data-category="froset">
+    <div class="category-section" data-category="froset">
       <h3>Froset</h3>
       <div class="upload-box">
         <input type="file" name="froset" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
-    </div> -->
+    </div>
 
-    <!-- <div class="category-section" data-category="pluttis">
+    <div class="category-section" data-category="pluttis">
       <h3>Pluttis</h3>
       <div class="upload-box">
         <input type="file" name="pluttis" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
-    </div> -->
+    </div>
   </form>
 
     <!-- Found Popup -->
@@ -678,17 +669,17 @@
     }
 
     // List of all required categories
-    const allCategories = [
-      "fantastisk", "lugnare", "upplaga", "fejka", "klimpfjall",
-      "mullfjallet", "billy", "sockerart", "uppland", "blavingad",
-      "lova", "bagis"
-    ];
-
     // const allCategories = [
-    //   "varmblixt", "pyssla", "senap mild", "dinera", "laktare",
-    //   "superkall", "pektolit", "lockig", "fredde", "svartpoppel",
-    //   "fridhult", "froset", "pluttis"
+    //   "fantastisk", "lugnare", "upplaga", "fejka", "klimpfjall",
+    //   "mullfjallet", "billy", "sockerart", "uppland", "blavingad",
+    //   "lova", "bagis"
     // ];
+
+    const allCategories = [
+      "fantastisk", "varmblixt", "pyssla", "laktare",
+      "superkall", "pektolit", "lockig", "oskarshamn", "svartpoppel",
+      "fridhult", "froset", "pluttis"
+    ];
 
     const allItemsPopup = document.getElementById("all-items-popup");
     const allItemsOkButton = document.getElementById("all-items-ok");
