icons updated back to 10 hiders

--- a/public/hider.html
+++ b/public/hider.html
@@ -670,8 +670,8 @@
 
     // List of all required categories
     // const allCategories = [
-    //   "fantastisk", "lugnare", "upplaga", "fejka", "klimpfjall",
-    //   "mullfjallet", "billy", "sockerart", "uppland", "blavingad",
+    //   "malm", "pax", "duktig", "sparka", "finnala",
+    //   "soderhamn", "utespelare", "bild", "stoense", "blavingad",
     //   "lova", "bagis"
     // ];
 
