--- a/public/seeker.html
+++ b/public/seeker.html
@@ -142,6 +142,7 @@
     <div class="icon"></div>
     <div class="icon"></div>
     <div class="icon"></div>
+    <div class="icon"></div>
   </div>
 
     <!-- Success Popup -->
@@ -169,7 +170,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
 
   <script>
-    const TOTAL_HIDERS = 9;
+    const TOTAL_HIDERS = 10;
 
     const firebaseConfig = {
         apiKey: "AIzaSyC1RdUtKa1cZ0osTSZd93GdcbOS0w54JYU",
