--- a/public/hider.html
+++ b/public/hider.html
@@ -475,7 +475,7 @@
   <script>
       (function () {
         const overlay = document.getElementById('screenblock');
-        const allowedPassword = 'pineapple12';
+        const allowedPassword = 'mcdonalds123';
 
         const granted = sessionStorage.getItem('hiderAccess');
         if (granted === 'granted') {
@@ -669,6 +669,12 @@
     }
 
     // List of all required categories
+    // const allCategories = [
+    //   "malm", "pax", "duktig", "sparka", "finnala",
+    //   "soderhamn", "utespelare", "bild", "stoense", "blavingad",
+    //   "lova", "bagis"
+    // ];
+
     // const allCategories = [
     //   "malm", "pax", "duktig", "sparka", "finnala",
     //   "soderhamn", "utespelare", "bild", "stoense", "blavingad",
