--- a/public/hider.html
+++ b/public/hider.html
@@ -226,163 +226,82 @@
 
   <form id="uploadForm">
     <!-- Repeatable category block -->
-    <div class="category-section" data-category="fantastisk">
-      <h3>Fantastisk</h3>
+    <div class="category-section" data-category="malm">
+      <h3>Malm</h3>
       <div class="upload-box">
-        <input type="file" name="fantastisk" accept="image/*" capture="camera" />
+        <input type="file" name="malm" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
     </div>
 
-    <!-- <div class="category-section" data-category="lugnare">
-      <h3>Lugnare</h3>
+    <div class="category-section" data-category="pax">
+      <h3>Pax</h3>
       <div class="upload-box">
-        <input type="file" name="lugnare" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div> -->
-
-    <!-- <div class="category-section" data-category="upplaga">
-      <h3>Upplaga</h3>
-      <div class="upload-box">
-        <input type="file" name="upplaga" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div> -->
-
-    <!-- <div class="category-section" data-category="fejka">
-      <h3>Fejka</h3>
-      <div class="upload-box">
-        <input type="file" name="fejka" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div> -->
-
-    <!-- <div class="category-section" data-category="klimpfjall">
-      <h3>Klimpfjall</h3>
-      <div class="upload-box">
-        <input type="file" name="klimpfjall" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div> -->
-
-    <!-- <div class="category-section" data-category="mullfjallet">
-      <h3>Mullfjallet</h3>
-      <div class="upload-box">
-        <input type="file" name="mullfjallet" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div> -->
-
-    <!-- <div class="category-section" data-category="billy">
-      <h3>Billy</h3>
-      <div class="upload-box">
-        <input type="file" name="billy" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div> -->
-
-    <!-- <div class="category-section" data-category="sockerart">
-      <h3>Sockerart</h3>
-      <div class="upload-box">
-        <input type="file" name="sockerart" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div> -->
-
-    <!-- <div class="category-section" data-category="uppland">
-      <h3>Uppland</h3>
-      <div class="upload-box">
-        <input type="file" name="uppland" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div> -->
-
-    <!-- <div class="category-section" data-category="blavingad">
-      <h3>Blavingad</h3>
-      <div class="upload-box">
-        <input type="file" name="blavingad" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div> -->
-
-    <!-- <div class="category-section" data-category="lova">
-      <h3>Lova</h3>
-      <div class="upload-box">
-        <input type="file" name="lova" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div> -->
-
-    <!-- <div class="category-section" data-category="bagis">
-      <h3>Bagis</h3>
-      <div class="upload-box">
-        <input type="file" name="bagis" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div> -->
-
-    <div class="category-section" data-category="varmblixt">
-      <h3>Varmblixt</h3>
-      <div class="upload-box">
-        <input type="file" name="varmblixt" accept="image/*" capture="camera" />
+        <input type="file" name="pax" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
     </div>
 
-    <div class="category-section" data-category="pyssla">
-      <h3>Pyssla</h3>
+    <div class="category-section" data-category="duktig">
+      <h3>Duktig</h3>
       <div class="upload-box">
-        <input type="file" name="pyssla" accept="image/*" capture="camera" />
+        <input type="file" name="duktig" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
     </div>
 
-    <!-- <div class="category-section" data-category="senapmild">
-      <h3>Senap Mild</h3>
+    <div class="category-section" data-category="sparka">
+      <h3>Sparka</h3>
       <div class="upload-box">
-        <input type="file" name="senapmild" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div> -->
-
-    <div class="category-section" data-category="laktare">
-      <h3>Laktare</h3>
-      <div class="upload-box">
-        <input type="file" name="laktare" accept="image/*" capture="camera" />
+        <input type="file" name="sparka" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
     </div>
 
-    <div class="category-section" data-category="superkall">
-      <h3>Superkall</h3>
+    <div class="category-section" data-category="finnala">
+      <h3>Finnala</h3>
       <div class="upload-box">
-        <input type="file" name="superkall" accept="image/*" capture="camera" />
+        <input type="file" name="finnala" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
     </div>
 
-    <div class="category-section" data-category="pektolit">
-      <h3>Pektolit</h3>
+    <div class="category-section" data-category="soderhamn">
+      <h3>Soderhamn</h3>
       <div class="upload-box">
-        <input type="file" name="pektolit" accept="image/*" capture="camera" />
+        <input type="file" name="soderhamn" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div>
+
+    <div class="category-section" data-category="utespelare">
+      <h3>Utespelare</h3>
+      <div class="upload-box">
+        <input type="file" name="utespelare" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div>
+
+    <div class="category-section" data-category="bild">
+      <h3>Bild</h3>
+      <div class="upload-box">
+        <input type="file" name="bild" accept="image/*" capture="camera" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div>
+
+    <div class="category-section" data-category="stockholm">
+      <h3>Stockholm</h3>
+      <div class="upload-box">
+        <input type="file" name="stockholm" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
@@ -392,42 +311,6 @@
       <h3>Lockig</h3>
       <div class="upload-box">
         <input type="file" name="lockig" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div>
-
-    <div class="category-section" data-category="oskarshamn">
-      <h3>Oskarshamn</h3>
-      <div class="upload-box">
-        <input type="file" name="oskarshamn" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div>
-
-    <div class="category-section" data-category="svartpoppel">
-      <h3>Svartpoppel</h3>
-      <div class="upload-box">
-        <input type="file" name="svartpoppel" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div>
-
-    <div class="category-section" data-category="fridhult">
-      <h3>Fridhult</h3>
-      <div class="upload-box">
-        <input type="file" name="fridhult" accept="image/*" capture="camera" />
-      </div>
-      <img class="upload-preview" />
-      <div class="success-message"></div>
-    </div>
-
-    <div class="category-section" data-category="froset">
-      <h3>Froset</h3>
-      <div class="upload-box">
-        <input type="file" name="froset" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
@@ -475,7 +358,7 @@
   <script>
       (function () {
         const overlay = document.getElementById('screenblock');
-        const allowedPassword = 'mcdonalds123';
+        const allowedPassword = 'cheese55';
 
         const granted = sessionStorage.getItem('hiderAccess');
         if (granted === 'granted') {
@@ -669,23 +552,23 @@
     }
 
     // List of all required categories
-    // const allCategories = [
-    //   "malm", "pax", "duktig", "sparka", "finnala",
-    //   "soderhamn", "utespelare", "bild", "stoense", "blavingad",
-    //   "lova", "bagis"
-    // ];
-
-    // const allCategories = [
-    //   "malm", "pax", "duktig", "sparka", "finnala",
-    //   "soderhamn", "utespelare", "bild", "stoense", "blavingad",
-    //   "lova", "bagis"
-    // ];
-
     const allCategories = [
-      "fantastisk", "varmblixt", "pyssla", "laktare",
-      "superkall", "pektolit", "lockig", "oskarshamn", "svartpoppel",
-      "fridhult", "froset", "pluttis"
+      "malm", "pax", "duktig", "sparka", "finnala",
+      "soderhamn", "utespelare", "bild", "stockholm", "lockig",
+      "pluttis"
     ];
+
+    // const allCategories = [
+    //   "malm", "pax", "duktig", "sparka", "finnala",
+    //   "soderhamn", "utespelare", "bild", "stoense", "blavingad",
+    //   "lova", "bagis"
+    // ];
+
+    // const allCategories = [
+    //   "fantastisk", "varmblixt", "pyssla", "laktare",
+    //   "superkall", "pektolit", "lockig", "oskarshamn", "svartpoppel",
+    //   "fridhult", "froset", "pluttis"
+    // ];
 
     const allItemsPopup = document.getElementById("all-items-popup");
     const allItemsOkButton = document.getElementById("all-items-ok");
