--- a/public/seeker.html
+++ b/public/seeker.html
@@ -143,6 +143,7 @@
     <div class="icon"></div>
     <div class="icon"></div>
     <div class="icon"></div>
+    <div class="icon"></div>
   </div>
 
     <!-- Success Popup -->
@@ -170,7 +171,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
 
   <script>
-    const TOTAL_HIDERS = 10;
+    const TOTAL_HIDERS = 11;
 
     const firebaseConfig = {
         apiKey: "AIzaSyC1RdUtKa1cZ0osTSZd93GdcbOS0w54JYU",
